@@ -1,3 +1,9 @@
+2002-04-14  Murray Cumming  <murrayc@usa.net>
+
+	* bonobo/bonobo-dock-band.c: bonobo_dock_band_new() is now
+	just a convenience wrapper for g_object_new(), now that
+	the widget_queue_resize() call is in the instance_init() function.
+
 2002-04-13  Anders Carlsson  <andersca@gnu.org>
 
 	* bonobo/bonobo-dock-item.c (bonobo_widget_clobber_focus): Also 
